ingrss/aws.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-service
spec:
  selector:
    app: aws
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aws
  template:
    metadata:
      labels:
        app: aws
    spec:
      containers:
      - name: aws
        image: asia-northeast3-docker.pkg.dev/myproject-463800/my-regi/aws:latest
        imagePullPolicy: Always
