ingrss/food.yaml
apiVersion: v1
kind: Service
metadata:
  name: food-service
spec:
  selector:
    app: food
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: food
spec:
  replicas: 1
  selector:
    matchLabels:
      app: food
  template:
    metadata:
      labels:
        app: food
    spec:
      containers:
      - name: food
        image: asia-northeast3-docker.pkg.dev/myproject-463800/my-regi/food:latest
        imagePullPolicy: Always
